# technopark_individual_task_1

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
include/: restaurant.h
sources/: main.c  restaurant.c
tests/: input.txt  tests.cpp
